--- a/hello_AngularJS.html
+++ b/hello_AngularJS.html
@@ -5,10 +5,12 @@
   </head>
   <body>
     <div>
+      <hr>
       <label>Name:</label>
       <input type="text" ng-model="yourName" placeholder="Enter a name here">
       <hr>
       <h1>Hello, {{yourName}}!</h1>
     </div>
+    <p>To see how easy, minimal and efficient <a href="http://angularjs.org/">AngularJS</a> is, view this page's HTML, or see the project code here: <a href="https://github.com/gurjeet/hello_angularjs">gurjeet.github.com</a> </p>
   </body>
 </html>
